[FIX] Change navbar on small device + fix some media queries

--- a/public/css/composent/photo.css
+++ b/public/css/composent/photo.css
@@ -5,6 +5,7 @@
     width: 80%;
     max-width: 1300px;
     margin: 70px auto 0;
+    z-index: 0;
 }
 
 .item {
