--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -3,6 +3,13 @@
 @import 'composent/photo.css';
 @import 'composent/button.css';
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
 html {
     scroll-behavior: smooth;
 }
