--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,6 +6,13 @@
 @import 'composent/button.css';
 @import 'composent/availability-calendar.css';
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -62,6 +69,6 @@ body.dark {
 
 @media screen and (max-width: 700px) {
     .page-title {
-        padding: 175px 0px;
+        padding: 270px 0px;
     }
 }
