--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -1,46 +1,51 @@
-.menu {
+.navbar {
     text-align: center;
     font-size: 18px;
+	width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.menu-ul {
+.menu {
     padding: 10px;
     margin: 0;
 }
 
-.menu-ul li {
+.sticky {
+    background: #0f4c75;
+	top: 0;
+    z-index: 100;
+    position: fixed;
+}
+
+.menu li {
     display: inline-block;
     font-variant: small-caps;
     letter-spacing: 3px;
     padding: 10px 30px;
 }
 
-a {
+.menu li a {
+	display: block;
     border-bottom: 1px solid transparent;
     color: white;
     text-decoration: none;
 }
 
-a:hover {
+.menu li a:hover {
     border-bottom: 1px solid white;
 }
 
-.sticky {
-    background: #0f4c75;
-    position: fixed;
-	top: 0;
-    width: 100%;
-    z-index: 100;
-}
-
-.sticky ul {
-    padding: 0;
-    margin: 10px;
+.menu-btn{
+    color: #ffffff;
+    cursor: pointer;
+    display: none;
 }
 
 .checkbox {
 	opacity: 0;
-	position: absolute;
+    position: absolute;
 }
 
 .label {
@@ -50,10 +55,10 @@ a:hover {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+    position: relative;
 	padding: 4px;
-	position: relative;
-	height: 10px;
-	width: 25px;
+	height: 17px;
+	width: 33px;
 	transform: scale(1.5);
 }
 
@@ -81,6 +86,7 @@ a:hover {
 .fa-sun {
 	color: #f39c12;
     font-size: 10px;
+	padding-left: 2px;
 }
 
 .mode {
@@ -90,8 +96,42 @@ a:hover {
 	margin: 0;
 }
 
-@media screen and (max-height: 700px) {
-    .menu {
-		font-size: 12px;
+@media (max-width: 947px){
+    .menu-btn{
+        display: block;
+		padding: 21px;
+        z-index: 999;
+    }
+    .menu-btn i.active:before{
+        content: "\f00d";
+    }
+    .navbar .menu.active{
+        left: 0;
+    }
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #0f4c75;
+        text-align: center;
+        padding-top: 50px;
+        transition: all 0.3s ease;
+        z-index: 1;
+    }
+    .navbar .menu.active{
+        left: 0;
+    }
+    .navbar .menu li{
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 5px 0;
+        font-size: 25px;
+    }
+	.label {
+		margin-left: 45%;
 	}
 }
